tests/ui/wf/ice-hir-wf-check-anon-const-issue-122989.stderr
warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:20
   |
LL | trait Foo<const N: Bar<2>> {
   |                    ^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` on by default
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait Foo<const N: dyn Bar<2>> {
   |                    +++

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:10:20
   |
LL | trait Bar<const M: Foo<2>> {}
   |                    ^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: if this is a dyn-compatible trait, use `dyn`
   |
LL | trait Bar<const M: dyn Foo<2>> {}
   |                    +++

error[E0391]: cycle detected when computing type of `Foo::N`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:11
   |
LL | trait Foo<const N: Bar<2>> {
   |           ^^^^^^^^^^^^^^^
   |
note: ...which requires computing type of `Bar::M`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:10:11
   |
LL | trait Bar<const M: Foo<2>> {}
   |           ^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `Foo::N`, completing the cycle
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of `Foo::N`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:11
   |
LL | trait Foo<const N: Bar<2>> {
   |           ^^^^^^^^^^^^^^^
   |
note: ...which requires computing type of `Bar::M`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:10:11
   |
LL | trait Bar<const M: Foo<2>> {}
   |           ^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of `Foo::N`, completing the cycle
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0391`.
